# mangum

./: .codecov.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish.yml  test.yml
mangum/: types.py
mangum/handlers/: alb.py
scripts/: lint  setup  test
tests/: conftest.py  test_adapter.py
tests/handlers/: test_alb.py  test_api_gateway.py  test_custom.py  test_http_gateway.py  test_lambda_at_edge.py
