[tool.poetry]
name = "mangum"
version = "0.17.1"
description = "Keep supporting Mangum"
authors = ["Jordan Eremieff <jordan@eremieff.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^8.3"
codecov = "^2.1"
pytest-cov = "^5.0"
black = "^24.8"
flake8 = "^7.1"
starlette = "^0.37"
quart = "^0.19"
mypy = "^1.11"
Brotli = "^1.1"
brotli-asgi = "^1.4"
mkdocs = "^1.6"
mkdocs-material = "^9.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
